--- a/src/app/shared/toolbar-content/toolbar-content.component.html
+++ b/src/app/shared/toolbar-content/toolbar-content.component.html
@@ -2,5 +2,5 @@
     <button mat-icon-button class="example-icon" (click)="onMenuClick()" aria-label="Example icon-button with menu icon">
         <mat-icon style="color: white;">menu</mat-icon>
     </button>
-    <span>DittoBox</span>
+    <span>QualiFood</span>
 </mat-toolbar>
